add app level dependency

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,24 +1,33 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
+    id 'androidx.navigation.safeargs.kotlin'
 }
 
 android {
-    compileSdk 32
+    compileSdk AppConfig.compileSdkVersion
 
     defaultConfig {
-        applicationId "com.example.demoapp"
-        minSdk 23
-        targetSdk 32
-        versionCode 1
-        versionName "1.0"
-
+        applicationId AppConfig.applicationId
+        minSdk AppConfig.minSdkVersion
+        targetSdk AppConfig.targetSdkVersion
+        versionCode AppConfig.versionCode
+        versionName AppConfig.versionName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
+        debug {
+            minifyEnabled true
+            shrinkResources true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -32,12 +41,43 @@ android {
 }
 
 dependencies {
+    implementation AppDep.coreKtx
+    implementation AppDep.material
+    implementation AppDep.appCompat
+    implementation AppDep.fragment
+    implementation AppDep.activity
+    implementation AppDep.recyclerview
+    implementation AppDep.cardView
+    implementation AppDep.viewModel
+    implementation AppDep.liveData
+    implementation AppDep.constraintLayout
+    implementation AppDep.preference
+    implementation AppDep.lifecycle
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation AppDep.navigationFragment
+    implementation AppDep.navigationFragment
+
+    implementation AppDep.hiltAndroid
+    kapt AppDep.hiltCompiler
+
+    implementation AppDep.rxJava3
+    implementation AppDep.rxJava3Android
+
+    implementation AppDep.sdp
+    implementation AppDep.ssp
+
+    implementation AppDep.retrofit
+    implementation AppDep.retrofitGsonConverter
+    implementation AppDep.rxJava3adapter
+    implementation AppDep.okhHttp3
+    implementation AppDep.okhHttp3Interceptor
+    implementation AppDep.gson
+    implementation AppDep.timber
+
+
+    debugImplementation AppDep.leakcanary
+
+    testImplementation AppDep.junit
+    androidTestImplementation AppDep.extJunit
+    androidTestImplementation AppDep.espresso
 }
