--- a/settings.gradle
+++ b/settings.gradle
@@ -11,3 +11,5 @@ include ':app'
 include ':feature:list'
 include ':navigation'
 include ':core:di'
+include ':core:api'
+include ':model:apiresponse'
