--- a/settings.gradle
+++ b/settings.gradle
@@ -13,5 +13,6 @@ include ':navigation'
 include ':core:di'
 include ':core:api'
 include ':model:apiresponse'
+include ':model:entity'
 include ':data'
 include ':domain'
