impl list feature

--- a/android-library.gradle
+++ b/android-library.gradle
@@ -35,6 +35,8 @@ android{
 
 dependencies {
     implementation project(ModulesDep.navigation)
+    implementation project(ModulesDep.domain)
+    implementation project(ModulesDep.common)
 
     implementation AppDep.coreKtx
     implementation AppDep.appCompat
