--- a/feature/list/build.gradle
+++ b/feature/list/build.gradle
@@ -7,7 +7,8 @@ plugins {
 apply from: "$rootDir/android-library.gradle"
 dependencies {
 
-implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
+    implementation project(ModulesDep.navigation)
+
+    implementation AppDep.epoxyCore
+    kapt AppDep.epoxyProcessor
 }
